package Model;
		
public class CategorySpec {
			
	private String name;

	public CategorySpec(String name) {
        this.name = name;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    @Override
    public String toString() {
        return "CategorySpec" +
                "name='" + name + '\'' +
                '}';
    }
}
