@startuml
title <u>Metamodel Graphical Representation</u>


class UserSpec #ffdab9 {
UserAttribute
Empresa.MoneyManagerModel.AttributeType
}


class AccountSpec #CD5C5C {
AccountAttribute
Empresa.MoneyManagerModel.AttributeType
}


class TransactionSpec #BDB76B {
TransactionAttribute
Empresa.MoneyManagerModel.AttributeType
}


class CategorySpec #e0b0ff {
CategoryAttribute
Empresa.MoneyManagerModel.AttributeType
}


class UserAccountAssociation #ffffff {}


class AccountTransactionAssociation #ffffff {}


class CategoryTransactionAssociation #ffffff {}


UserSpec "1" --> "0..*" UserAccountAssociation
AccountSpec "1" --> "0..*" UserAccountAssociation
AccountSpec "1" --> "0..*" AccountTransactionAssociation
TransactionSpec "1" --> "0..*" AccountTransactionAssociation
TransactionSpec "1" --> "0..*" CategoryTransactionAssociation
CategorySpec "1" --> "0..*" CategoryTransactionAssociation
@enduml
